docs/api/qiskit/0.37/qiskit.extensions.HamiltonianGate.mdx
---
title: HamiltonianGate (v0.37)
description: API reference for qiskit.extensions.HamiltonianGate in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.extensions.HamiltonianGate
---

# HamiltonianGate

<Class id="qiskit.extensions.HamiltonianGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/extensions/hamiltonian_gate.py" signature="HamiltonianGate(data, time, label=None)" modifiers="class">
  Bases: [`qiskit.circuit.gate.Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  Class for representing evolution by a Hermitian Hamiltonian operator as a gate. This gate resolves to a UnitaryGate U(t) = exp(-1j \* t \* H), which can be decomposed into basis gates if it is 2 qubits or less, or simulated directly in Aer for more qubits.

  Create a gate from a hamiltonian operator and evolution time parameter t

  **Parameters**

  *   **data** (*matrix or* [*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a hermitian operator.
  *   **time** (*float*) – time evolution parameter.
  *   **label** (*str*) – unitary name for backend \[Default: None].

  **Raises**

  **ExtensionError** – if input data is not an N-qubit unitary operator.

  ## Methods

  <span id="qiskit-extensions-hamiltoniangate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.extensions.HamiltonianGate.add_decomposition" signature="HamiltonianGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-adjoint" />

  ### adjoint

  <Function id="qiskit.extensions.HamiltonianGate.adjoint" signature="HamiltonianGate.adjoint()">
    Return the adjoint of the unitary.
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-assemble" />

  ### assemble

  <Function id="qiskit.extensions.HamiltonianGate.assemble" signature="HamiltonianGate.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.extensions.HamiltonianGate.broadcast_arguments" signature="HamiltonianGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-c-if" />

  ### c\_if

  <Function id="qiskit.extensions.HamiltonianGate.c_if" signature="HamiltonianGate.c_if(classical, val)">
    Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.

    <Admonition title="Note" type="note">
      This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
    </Admonition>
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-conjugate" />

  ### conjugate

  <Function id="qiskit.extensions.HamiltonianGate.conjugate" signature="HamiltonianGate.conjugate()">
    Return the conjugate of the Hamiltonian.
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-control" />

  ### control

  <Function id="qiskit.extensions.HamiltonianGate.control" signature="HamiltonianGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`int`) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-copy" />

  ### copy

  <Function id="qiskit.extensions.HamiltonianGate.copy" signature="HamiltonianGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-inverse" />

  ### inverse

  <Function id="qiskit.extensions.HamiltonianGate.inverse" signature="HamiltonianGate.inverse()">
    Return the adjoint of the unitary.
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.extensions.HamiltonianGate.is_parameterized" signature="HamiltonianGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-power" />

  ### power

  <Function id="qiskit.extensions.HamiltonianGate.power" signature="HamiltonianGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-qasm" />

  ### qasm

  <Function id="qiskit.extensions.HamiltonianGate.qasm" signature="HamiltonianGate.qasm()">
    Raise an error, as QASM is not defined for the HamiltonianGate.
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-repeat" />

  ### repeat

  <Function id="qiskit.extensions.HamiltonianGate.repeat" signature="HamiltonianGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-reverse-ops" />

  ### reverse\_ops

  <Function id="qiskit.extensions.HamiltonianGate.reverse_ops" signature="HamiltonianGate.reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-soft-compare" />

  ### soft\_compare

  <Function id="qiskit.extensions.HamiltonianGate.soft_compare" signature="HamiltonianGate.soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.extensions.HamiltonianGate.to_matrix" signature="HamiltonianGate.to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Returns**

    if the Gate subclass has a matrix definition.

    **Return type**

    np.ndarray

    **Raises**

    **CircuitError** – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-transpose" />

  ### transpose

  <Function id="qiskit.extensions.HamiltonianGate.transpose" signature="HamiltonianGate.transpose()">
    Return the transpose of the Hamiltonian.
  </Function>

  <span id="qiskit-extensions-hamiltoniangate-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.extensions.HamiltonianGate.validate_parameter" signature="HamiltonianGate.validate_parameter(parameter)">
    Hamiltonian parameter has to be an ndarray, operator or float.
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.extensions.HamiltonianGate.condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.extensions.HamiltonianGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.extensions.HamiltonianGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.extensions.HamiltonianGate.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.extensions.HamiltonianGate.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### name

  <Attribute id="qiskit.extensions.HamiltonianGate.name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.extensions.HamiltonianGate.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.extensions.HamiltonianGate.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.extensions.HamiltonianGate.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.extensions.HamiltonianGate.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

